fix(videos.md): added flex-wrap to prevent overflow

--- a/assets/videos.scss
+++ b/assets/videos.scss
@@ -4,6 +4,7 @@
 .videos {
     width:100%;
     display: flex;
+    flex-wrap: wrap;
 }
 @media only screen and (max-width: 600px) {
     .videos {
